--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "y",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -15,6 +14,17 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.6.3"
-  }
+    "mongoose": "^5.6.3",
+    "multer": "^1.4.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nagababu143/home-care.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Nagababu143/home-care/issues"
+  },
+  "homepage": "https://github.com/Nagababu143/home-care#readme",
+  "description": ""
 }
