--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
   "name": "y",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "validator": "^11.1.0"
   },
   "devDependencies": {},
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Nagababu143/home-care.git"
   },
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nagababu143/home-care/issues"
   },
-  "homepage": "https://github.com/Nagababu143/home-care#readme",
-  "description": ""
+  "homepage": "https://github.com/Nagababu143/home-care#readme"
 }
