--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cryptr": "^4.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.3",
     "multer": "^1.4.1",
+    "node-decrypt": "0.0.1",
+    "nodemailer": "^6.3.0",
     "validator": "^11.1.0"
   },
   "devDependencies": {},
